# FolderForge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.json  description.json  setup.cfg
src/folderforge/: __init__.py  __main__.py  services.py
src/folderforge/models/: __init__.py  file.py
src/folderforge/services/: __init__.py  change_directory_context.py  file_service.py  folderforge_service.py
src/folderforge/utils/: Class.py  enums.py  functions.py  styles.py
