[metadata]
name = folderforge
version = 1.0.0
author = StenTech
author_email = stentech@gmail.com
description = A simple and user-friendly tool for generating directory and file structures based on a defined format in JSON, YAML, or other formats.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StenTech/FolderForge
project_urls =
    Bug Tracker = https://github.com/StenTech/FolderForge/log-module/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =


[options.packages.find]
where = src
