[metadata]
name = folderforge
version = 1.0.1
author = StenTech
author_email = phd.sten.tech@gmail.com
description = FolderForge is a Python utility for creating directory structures based on a description file in JSON format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StenTech/FolderForge
project_urls =
    Bug Tracker = https://github.com/StenTech/FolderForge/log-module/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
	requests==2.28.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    folderforge = folderforge.__main__:main
